--- a/ScrollBarInTabPage/ScrollBarInTabPage.Client/Pages/TabWithScrollDialog.razor
+++ b/ScrollBarInTabPage/ScrollBarInTabPage.Client/Pages/TabWithScrollDialog.razor
@@ -4,13 +4,19 @@
 <FluentDialogHeader Title="Scroll With Tab" ShowDismiss="true" />
 
 <FluentDialogBody>
-    <FluentTabs Height="100%" Width="100%">
+    <FluentTabs Height="62vh" Width="100%">
         <FluentTab Label="Intro">
 
             <h1>Introduction</h1>
             <p>The "Scroll" tab contains a large document that should cause scrolling
                 but the fluent-tab-panel is oversized so the data and the scroll bar
                 run off the page.
+            </p>
+            <p>
+                That issue was resolved changing Height="100%" to Height="62vh". But, a second
+                issue is that the horizontal scrollbar is placed at the bottom of the content
+                rather than the bottom of the tab panel so, you have to scroll to the bottom
+                in order to see the horizontal scrollbar.
             </p>
         </FluentTab>
         <FluentTab Label="Scroll">
