Horizontal scroll bar issue is resolved.

--- a/ScrollBarInTabPage/ScrollBarInTabPage.Client/Pages/TabWithScrollDialog.razor
+++ b/ScrollBarInTabPage/ScrollBarInTabPage.Client/Pages/TabWithScrollDialog.razor
@@ -19,7 +19,7 @@
                 in order to see the horizontal scrollbar.
             </p>
         </FluentTab>
-        <FluentTab Label="Scroll">
+        <FluentTab Label="Scroll" Style="display:flex">
             <pre>@Content
             </pre>
         </FluentTab>
